db-cluster/users/k8s-cluster2/ns-mengsimnam-gmail-com-56a769b2/seang/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: seang-tcp
  namespace: ns-mengsimnam-gmail-com-56a769b2
spec:
  entryPoints:
  - postgresql
  routes:
  - match: HostSNI(`seang.seang.shop`)
    services:
    - name: seang-postgresql-pooler-rw
      port: 5432
  tls:
    passthrough: true
